# SecureFileShredder

./: .gitignore  .replit  LICENSE  README.md  SecureFileShredder.spec  build.py  build_instructions.txt  file_shredder.py  gui.py  main.py  ocr_processor.py  pyproject.toml  pyvenv.cfg  requirements.txt  settings.json  utils.py  version.py
Scripts/: activate  activate.bat  activate.fish  activate.nu
